# TTR_Bot

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  TTR Bot.spec  calibrate_garden_path.py  capture_templates.py  main.py  prek.toml  pyproject.toml  record_sell_path.py  requirements.txt  test_localizer.py  test_navigate.py  test_recorder.py
.github/workflows/: ci.yml  release-macos.yml
config/: settings.py
core/: cast_calibration.py  input_controller.py  screen_capture.py  window_manager.py
data/gardening_routines/: full_cycle.json
data/golf_actions/: EASY - Afternoon Tee.json  EASY - Down the Hatch.json  EASY - Hole In Fun.json  EASY - Hole on the Range.json  EASY - Holey Mackeral.json  EASY - Hot Links.json  EASY - One Little Birdie.json  EASY - Seeing green.json  EASY - Swing Time.json  HARD - Afternoon Tee-2.json  HARD - At the Drive In-2.json  HARD - Hole on the Range-2.json  HARD - No Putts About It-2.json  HARD - One Little Birdie-2.json  HARD - Peanut Putter-2.json  HARD - Second Wind-2.json  HARD - Seeing Green-2.json  HARD - Swing-A-Long-2.json  HARD - Whole in Won-2.json  HARD - Whole in Won.json  MEDIUM - At the Drive In.json  MEDIUM - Bogey Nights-2.json  MEDIUM - Down the Hatch-2.json  MEDIUM - Hole in Fun-2.json  MEDIUM - Holey Mackerel-2.json  MEDIUM - Hot Links-2.json  MEDIUM - No Putts About It.json  MEDIUM - Rock and Roll In-2.json  MEDIUM - Rock and Roll In.json  MEDIUM - Second Wind.json  MEDIUM - Swing Time-2.json  MEDIUM - Tea Off Time.json
fishing/: fishing_bot.py  sell_controller.py
gardening/: demo_processor.py  demo_recorder.py  gardening_bot.py  navigator.py  routine_runner.py
packaging/macos/: AppIcon.icns  Entitlements.plist
scripts/: build_mac_app.sh  build_mac_icon.sh  ci_codesign_mac_app.sh  ci_notarize_mac_app.sh
sell_paths/: Donalds_Dreamland.json
src/ttr_bot/: __init__.py  __main__.py
src/ttr_bot/config/: __init__.py  app_paths.py  cast_params.json  settings.py
src/ttr_bot/core/: __init__.py  bobber_detector.py  bot_base.py  calibration_service.py  cast_calibration.py  cast_input.py  cast_params.py  errors.py  input_controller.py  screen_capture.py  window_manager.py
src/ttr_bot/fishing/: __init__.py  bite_detector.py  cast_fitter.py  cast_recorder.py  fishing_bot.py  fishing_debug.py  sell_controller.py
src/ttr_bot/gardening/: __init__.py  bed_ui.py  demo_processor.py  demo_recorder.py  flowers.py  garden_mapper.py  garden_sweeper.py  garden_ui_helpers.py  garden_watcher.py  gardening_bot.py  navigator.py  plant_sequence.py  routine_runner.py  sweep_interaction.py
src/ttr_bot/golf/: __init__.py  action_files.py  action_player.py  course_detector.py  courses.py  detector.py  golf_bot.py  ocr_text.py  shot_summary.py  swing_detector.py
src/ttr_bot/ui/: __init__.py  app.py  calibration.py  fishing_tab.py  gardening_tab.py  golf_course_dialog.py  golfing_tab.py  log_handler.py  overlay.py  theme.py
src/ttr_bot/utils/: __init__.py  debug_frames.py  logger.py
src/ttr_bot/vision/: __init__.py  bubble_detector.py  color_matcher.py  fish_detector.py  flower_detector.py  localizer.py  (+3 more)
tests/: conftest.py  test_bed_ui.py  test_cast_calibration.py  test_color_matcher.py  test_flowers.py  test_localizer.py  test_pond_detector.py  test_recorder.py
tools/: calibrate_garden_path.py  capture_templates.py  diagnose_shadows.py  diagnose_templates.py  recapture_cast_button.py  record_sell_path.py  snapshot_game_state.py  test_localizer.py  test_navigate.py  test_recorder.py
ui/: app.py  calibration.py  gardening_tab.py  overlay.py
utils/: logger.py
vision/: bubble_detector.py  color_matcher.py  fish_detector.py  localizer.py  pond_detector.py  template_matcher.py
