[project]
name = "ttr-bot"
version = "0.1.0"
description = "Toontown Rewritten automation bot"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pyautogui>=0.9.54",
    "pillow>=10.2.0",
    "pyobjc-framework-quartz>=10.1; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=10.1; sys_platform == 'darwin'",
    "pynput>=1.7.6",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttr_bot"]

[project.scripts]
ttr-bot = "ttr_bot.__main__:main"

[dependency-groups]
dev = ["ruff>=0.4", "pytest>=8.0", "ty>=0.0.27"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C901", "PLR0912", "PLR0915"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Third-party stubs (pyobjc, cv2, tkinter) are incomplete or overly strict
unresolved-import = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
# Tkinter **pad dict expansion and numpy.bool -> bool false positives
invalid-argument-type = "warn"
